[project]
name = "re-javsdt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.8"
dependencies = [
    "altgraph==0.17",
    "baidu-aip==2.2.18.0",
    "certifi==2020.4.5.1",
    "chardet==3.0.4",
    "cloudscraper==1.2.40",
    "diskcache==5.6.3",
    "future==0.18.2",
    "idna==2.9",
    "pefile==2019.4.18",
    "pillow==7.1.2",
    "pyinstaller==3.6",
    "pyparsing==2.4.7",
    "pytest-playwright>=0.5.2",
    "pywin32-ctypes==0.2.0",
    "requests==2.23.0",
    "requests-toolbelt==0.9.1",
    "urllib3==1.25.9",
]

[project.optional-dependencies]
dev = [
    "autopep8==2.3.1",
]
[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
